Fixed icons not showing on production

--- a/app/assets/stylesheets/components/_icon.sass
+++ b/app/assets/stylesheets/components/_icon.sass
@@ -8,8 +8,8 @@
   font-family: "dripicons-v2"
   font-style: normal
   font-weight: normal
-  src: url("fonts/dripicons-v2.eot")
-  src: url("fonts/dripicons-v2.eot?#iefix") format("embedded-opentype"), url("fonts/dripicons-v2.woff") format("woff"), url("fonts/dripicons-v2.ttf") format("truetype"), url("fonts/dripicons-v2.svg#dripicons-v2") format("svg")
+  src: asset-url("fonts/dripicons-v2.eot")
+  src: asset-url("fonts/dripicons-v2.eot?#iefix") format("embedded-opentype"), asset-url("fonts/dripicons-v2.woff") format("woff"), asset-url("fonts/dripicons-v2.ttf") format("truetype"), asset-url("fonts/dripicons-v2.svg#dripicons-v2") format("svg")
 
 
 [data-icon]:before
